Remove redundant config field
